maze.wallfollower.WallFollowerMaze.scala.error
Compilation error:
WallFollowerMaze:3: error: illegal start of simple expression
    var x = 0
    ^